Update 2.1 Типы и назначение операционных систем. ОС Linux - Никита Степаненков.md

--- a/2.1 Типы и назначение операционных систем. ОС Linux - Никита Степаненков.md
+++ b/2.1 Типы и назначение операционных систем. ОС Linux - Никита Степаненков.md
@@ -1,14 +1,5 @@
 # Домашнее задание к занятию "2.1 Типы и назначение операционных систем. ОС Linux"
 
-
-**Домашнее задание выполните в [Google Docs](https://docs.google.com/) и отправьте в личном кабинете на проверку ссылку на ваш документ.**
-
-Название файла должно содержать номер лекции и фамилию студента. Пример названия: "2.1 Типы и назначение операционных систем. ОС Linux - Александр Дивеев"
-
-Перед тем как выслать ссылку, убедитесь, что ее содержимое не является приватным (открыто на просмотр всем, у кого есть ссылка). Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате учебной группы.
-
 ---
 
 ### Задание 1. 
@@ -17,12 +8,15 @@
 Компания ООО "Рога и Копыта" решила автоматизировать свою работу и централизировать управление учетными записями.
 Руководством было принято решение развернуть пять новых серверов:
 
-* систему контроля доступа пользователей и управления учетными записями;
-* терминальный сервер;
-* два сервера для веб-приложений и прокси сервер.
+* систему контроля доступа пользователей и управления учетными записями; 
+#### - Как мне кажется, это будет зависить от ПО, в котором будет выдаваться доступы. Мне знакома ERP-система SAP S4 HANA. Для нее рекомендуется разварачивать Linux - он надежней. Но есть кейсы, где разаварачивают на Windows Server. В тоже время хорошим вариантом для работы на MS office будет реализация сервера на WS. 
+* терминальный сервер; 
+#### - Данный сервер я бы разворачивал на linux, тк он надежней и дешевле, но тут также будет стоять вопрос совместимости ПО.  
+* два сервера для веб-приложений и прокси сервер. 
+#### - Более стабильный и менее затратный вариант для обоих серверов будет Linux-сервер. 
 
-#### Какие ОС вы выберете для каких серверов? Почему?
-
+### Какие ОС вы выберете для каких серверов? Почему?
+#### - Оставил ответ под каждым пунктом.  
 *Напишите ответ в свободной форме.*
 
 ---
@@ -32,13 +26,20 @@
 #### На каких уровнях системы работают следующие службы или приложения?
 
 * оконный менеджер;
+#### - O/S Services
 * файловый менеджер;
+#### - User Aplications
 * веб-браузер;
+#### - User Aplications
 * текстовый редактор;
+#### - O/S Services
 * калькулятор.
+#### - User Aplications
 
 ---
 
 ### Задание 3. 
 
 #### Назовите по два DEB и RPM дистрибутива.
+#### - Deb: Ubuntu,Grml
+#### - RPM: Fedora, CentOS
