--- a/2.6 Дисковые системы - Степаненков Никита.md
+++ b/2.6 Дисковые системы - Степаненков Никита.md
@@ -28,10 +28,13 @@
 Подключите к виртуальной машине 2 новых диска. 
 
 1)На первом диске создайте таблицу разделов MBR, Создайте 4 раздела: первый раздел на 50% диска, остальные любого размера на ваше усмотрение. Хотя бы один из разделов должен быть логическим.
+<img width="729" alt="Снимок экрана 2022-07-20 в 20 43 27" src="https://user-images.githubusercontent.com/107577468/180049157-2a799f35-0582-4ce3-b212-71c45fa35386.png">
 
 2)На втором диске создайте таблицу разделов GPT. Создайте 4 раздела: первый раздел на 50% диска, остальные любого размера на ваше усмотрение.
+<img width="712" alt="Снимок экрана 2022-07-20 в 20 25 32" src="https://user-images.githubusercontent.com/107577468/180049207-e6110729-fcf1-4956-815d-e4ab2a0510d5.png">
 
 *В качестве ответа приложите скриншоты, на которых было бы видно разметку диска(например, командами lsblk -a; fdisk -l)*
+
 
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (необязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
