Update 2.6 Дисковые системы - Степаненков Никита.md

--- a/2.6 Дисковые системы - Степаненков Никита.md
+++ b/2.6 Дисковые системы - Степаненков Никита.md
@@ -39,6 +39,9 @@
 
 *В качестве ответа приложите скриншоты, на которых было бы видно разметку диска(например, командами lsblk -a; fdisk -l)*
 
+<img width="470" alt="Снимок экрана 2022-07-20 в 20 55 20" src="https://user-images.githubusercontent.com/107577468/180050067-3a9d1688-ba2d-4dd7-bd77-60182cb169a4.png">
+
+
 
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (необязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
