Update 2.7 Файловые системы - Степаненков Никита.md

--- a/2.7 Файловые системы - Степаненков Никита.md
+++ b/2.7 Файловые системы - Степаненков Никита.md
@@ -14,13 +14,16 @@
 #### нет, разные
 
 *Вопрос 2: Файл /tmp/soft_link и /tmp/hard_link это один и тот же файл(одинаковые inode)?*
-#### нет, они разные
+#### они различаеются, тк символическая ссылка Не содержит внутри себя содержимого самого файла, содержит путь к целевому файлу, а жесткая ссылка это дополнительный указатель на существующий файл.   
 
 *Вопрос 3: Файл /tmp/test_123 и /tmp/hard_link это один и тот же файл(одинаковые inode)?*
 #### да, одинаковые
 
 *Вопрос 4: Докажите что одна из ссылок символическая, а другая жесткая. Обязательно приложите в ответ скриншоты команд, которые иллюстрируют различия ссылок разного типа или(если не уверены) ход решения задания.*
 <img width="680" alt="Снимок экрана 2022-07-22 в 00 40 38" src="https://user-images.githubusercontent.com/107577468/180320666-58416770-df66-43fc-b84b-5e3ad81fcc34.png">
+
+<img width="1121" alt="Снимок экрана 2022-07-22 в 14 10 50" src="https://user-images.githubusercontent.com/107577468/180427440-7c9fbf7b-5b41-4e00-8a56-6f32a0a437a4.png">
+
 
 
 <img width="679" alt="Снимок экрана 2022-07-22 в 00 43 29" src="https://user-images.githubusercontent.com/107577468/180320384-8e122e19-26f9-433a-8094-6171c9011936.png">
@@ -40,7 +43,9 @@
 ### Задание 3
 
 * Как посмотреть количество `inodes`?
+#### $ ls -lai /
 * В каких файловых системах не может возникнуть проблемы нехватки `inodes`?
+#### inodes - это структура данных в традиционных для ОС UNIX файловых системах, например UFS, ext4. В нетрадиционнах проблем возщникнуть не должно. 
 
 *Приведите ответ в свободной форме.*
 
@@ -54,10 +59,15 @@
 * Создайте на нем один раздел размером 2 ГБ.
 * Разметьте раздел как `xfs`.
 * Смонтируйте раздел по пути /mnt. Создайте любой файл на смонтированной файловой системе. Выполните скриншот вывода команды "df -hT".
+
+ ![2022-07-22 22 42 26](https://user-images.githubusercontent.com/107577468/180515997-e79f46e1-b44b-437d-ad57-e3cf7b99feda.jpg)
+
 * Увеличьте раздел до 3 ГБ. 
 * Расширьте файловую систему на новое свободное пространство.
 * Убедитесь что созданный вами файл остался внутри раздела и файловой системы после всех манипуляций.
 * Выпоните скриншот вывода команды "df -hT".
+![2022-07-22 22 42 39](https://user-images.githubusercontent.com/107577468/180516046-93484c70-2b48-447c-a299-0008def94394.jpg)
+
 
 *В качестве ответа приложите выполненные два скриншота.*
 
