--- a/2.7 Файловые системы - Степаненков Никита.md
+++ b/2.7 Файловые системы - Степаненков Никита.md
@@ -1,7 +1,5 @@
 # Домашнее задание к занятию "2.7 Файловые системы "
 
-**
-
 ---
 
 ### Задание 1
@@ -45,7 +43,7 @@
 * Как посмотреть количество `inodes`?
 #### $ ls -lai /
 * В каких файловых системах не может возникнуть проблемы нехватки `inodes`?
-#### inodes - это структура данных в традиционных для ОС UNIX файловых системах, например UFS, ext4. В нетрадиционнах проблем возщникнуть не должно. 
+#### inodes - это структура данных в традиционных для ОС UNIX файловых системах, например UFS, ext4. В нетрадиционнах проблем возникнуть не должно (ReiserFS). 
 
 *Приведите ответ в свободной форме.*
 
@@ -60,7 +58,7 @@
 * Разметьте раздел как `xfs`.
 * Смонтируйте раздел по пути /mnt. Создайте любой файл на смонтированной файловой системе. Выполните скриншот вывода команды "df -hT".
 
- ![2022-07-22 22 42 26](https://user-images.githubusercontent.com/107577468/180515997-e79f46e1-b44b-437d-ad57-e3cf7b99feda.jpg)
+![2022-07-22 22 42 26](https://user-images.githubusercontent.com/107577468/180515997-e79f46e1-b44b-437d-ad57-e3cf7b99feda.jpg)
 
 * Увеличьте раздел до 3 ГБ. 
 * Расширьте файловую систему на новое свободное пространство.
