Update 2.8 Ядро операционной системы - Степаненков Никита.md

--- a/2.8 Ядро операционной системы - Степаненков Никита.md
+++ b/2.8 Ядро операционной системы - Степаненков Никита.md
@@ -33,7 +33,9 @@
 
 *В качестве ответа напишите название системного вызова.*
 
-<img width="839" alt="image" src="https://user-images.githubusercontent.com/107577468/180873352-dc7d70ff-db00-4412-a0dd-9187a93a21d5.png">
+<img width="715" alt="Снимок экрана 2022-07-27 в 17 49 35" src="https://user-images.githubusercontent.com/107577468/181311086-cd94933d-a714-47da-bcae-4785087d370f.png">
+
+#### Ответ: chdir. Также просьба уточнить, как это можно сделать путем strace -P или -e. У меня не получилось. 
 
 
 ---
@@ -100,3 +102,7 @@ insmod path/to/module.ko
 ```
 
 *В качестве ответа приложите скриншот вывода установки модуля в `dmesg`.*
+#### Почему то выскачила ошибка. Делал через vim и nano. В vim не прржимался esc (интересно почему?) 
+<img width="995" alt="Снимок экрана 2022-07-28 в 19 16 59" src="https://user-images.githubusercontent.com/107577468/181587801-b5c8b922-60cf-4d8f-bee1-abed675cacf6.png">
+<img width="998" alt="Снимок экрана 2022-07-28 в 19 15 47" src="https://user-images.githubusercontent.com/107577468/181587824-73fd5d72-4244-4334-821e-b326556b3e69.png">
+
