Update 3.1 Типы дистрибутивов Linux - Степаненков Никита.md

--- a/3.1 Типы дистрибутивов Linux - Степаненков Никита.md
+++ b/3.1 Типы дистрибутивов Linux - Степаненков Никита.md
@@ -36,18 +36,29 @@
 `apt install mc`
 
 *Как получить информацию из какого репозитория был установлен пакет?*
+<img width="592" alt="Снимок экрана 2022-09-04 в 23 30 08" src="https://user-images.githubusercontent.com/107577468/188332260-d6e91319-f4ad-47d3-a017-796fa900894d.png">
+или find-repos-of-install mc
+<img width="651" alt="Снимок экрана 2022-09-04 в 23 21 26" src="https://user-images.githubusercontent.com/107577468/188332266-cac39ef5-1b5f-4d0f-982d-9be1fcce76a2.png">
+
 
 **3.2**
 
 *Какой командой можно получить список доступных репозиториев в RPM и Deb- based системах? Два ответа для каждой из систем.*
+#### RPM (Fedora) - <img width="587" alt="Снимок экрана 2022-09-04 в 23 37 28" src="https://user-images.githubusercontent.com/107577468/188332598-1054814d-dd9d-4068-bb63-9bbfc66ffbf6.png">
+
+#### Deb - <img width="715" alt="Снимок экрана 2022-09-04 в 23 40 49" src="https://user-images.githubusercontent.com/107577468/188332614-b2444cd5-697b-48b0-9064-ac9f7c4703a0.png">
 
 **3.3**
 
 *Как узнать версию ОС в Linux? Как узнать версию ядра? Укажите для вашей системы, неважно какой.*
+<img width="725" alt="Снимок экрана 2022-09-04 в 23 45 39" src="https://user-images.githubusercontent.com/107577468/188332785-60bdb14b-80ae-43b3-b301-ecf641d338fe.png">
+
 
 **3.4**
 
 *Как узнать какая система инициализации используется в Linux? Укажите для вашей системы, неважно какой.*
+<img width="730" alt="Снимок экрана 2022-09-04 в 23 48 36" src="https://user-images.githubusercontent.com/107577468/188332887-f1b575fa-c386-482d-9dcf-e7d0a9565199.png">
+
 
 ---
 
