Update 3.2 Управление пакетами - Степаненков Никита.md

--- a/3.2 Управление пакетами - Степаненков Никита.md
+++ b/3.2 Управление пакетами - Степаненков Никита.md
@@ -11,7 +11,7 @@
 * Есть ли минусы?
 
 *Напишите ответ в свободной форме.*
-#### #### Осноные плюсы в том, что пакетный менджер сам скачивает, устанавливает и удаляет пакеты. Далее автоматически находит зависимости и доустанавливает необходимые части ПО. Минус в том, что иногда приходится находить сторонние репозитории, и качать ПО из них, тк актуальной и оптимально функционирующей версии может не быть в стандартном репозитории. 
+#### Осноные плюсы в том, что пакетный менеджер сам скачивает, устанавливает и удаляет пакеты. Далее автоматически находит зависимости и доустанавливает необходимые части ПО. Минус в том, что иногда приходится находить сторонние репозитории, и качать ПО из них, тк актуальной и оптимально функционирующей версии может не быть в стандартном репозитории. 
 
 ---
 
