Update 3.2 Управление пакетами - Степаненков Никита.md

--- a/3.2 Управление пакетами - Степаненков Никита.md
+++ b/3.2 Управление пакетами - Степаненков Никита.md
@@ -20,8 +20,11 @@
 При подключении стороннего репозитория надо выполнить ряд определенных действий.
 
 * Каких?
+#### Необходимо указать репозитории в файле source.list пакетного менеджера и далее скачать gpg-ключи. 
 * В чем опасность такого способа распространения ПО?
+#### В первую очередь такой подход может быть небезопасным, есть риск заражение вирусным ПО. Кроме того есть возмождноесть получить недотестированные пакеты с ошибками. 
 * Как это решается?
+#### Стараться использовать проверенные и надежные репозитории. 
 
 *Напишите ответ в свободной форме.*
 
@@ -37,6 +40,9 @@
 Какие зависимости требует `htop`?
 
 *Ответ приведите в виде текста команды, которой вы это выполнили, а также приложите скриншот места расположения исполняемых файлов установленного ПО.*
+<img width="722" alt="Снимок экрана 2022-09-14 в 22 16 00" src="https://user-images.githubusercontent.com/107577468/190245827-33fdcd7f-704b-4b51-9a41-25f658c9d529.png">
+<img width="1015" alt="Снимок экрана 2022-09-14 в 22 18 38" src="https://user-images.githubusercontent.com/107577468/190245847-c53140d6-62c2-4197-a44d-88a9630de3ca.png">
+<img width="722" alt="Снимок экрана 2022-09-14 в 22 16 00" src="https://user-images.githubusercontent.com/107577468/190245863-4b87bdc1-3cd8-4dec-af30-3737b985de2e.png">
 
 ---
 
@@ -46,7 +52,11 @@
 
 *Приложите скриншот содержимого файла, в котором записан адрес репозитория.*
 
+<img width="722" alt="Снимок экрана 2022-09-14 в 22 44 56" src="https://user-images.githubusercontent.com/107577468/190248592-b254a589-9aea-4136-af2c-2ed0b2b27a93.png">
+
 2. При помощи команды `php -v` убедитесь, что бы поставлена корректная версия PHP.
+
+<img width="608" alt="Снимок экрана 2022-09-14 в 23 12 53" src="https://user-images.githubusercontent.com/107577468/190253035-b5997ad2-7a98-44bb-9483-d2c6b3b7c375.png">
 
 *Приложите к ответу скриншот версии.*
 
@@ -63,7 +73,12 @@
 **Примечение №2:** не забудьте выдать права на исполение скачанному файлу. Возможно, будет ошибка при установки при помощи Python версии 2, в таком случае воспользйтесь командой `python3`.
 
 *Приложите скриншоты  с установленным пакетом `python-distutils`, с версией `Pip` и установленными модулями (должны быть видимы)*
+<img width="434" alt="Снимок экрана 2022-09-14 в 23 54 45" src="https://user-images.githubusercontent.com/107577468/190260556-6db44794-a305-4f6c-b781-7dd60b82ab47.png">
+<img width="431" alt="Снимок экрана 2022-09-14 в 23 53 54" src="https://user-images.githubusercontent.com/107577468/190260570-f9d2f733-b520-43b4-b9fa-9ad9718402b8.png">
 
+#### Удалось установить pip, в командах использовал pip3, скачал sudo apt-get install python3-distutils-extra, без extra - ошибка. 
+#### также установил sudo pip3 install --upgrade google-api-python-client
+#### достаточно ли этих действий? 
 ---
 
 **
