Update 3.3 Инициализация системы, Init, systemd - Александр Дивеев.md

--- a/3.3 Инициализация системы, Init, systemd - Александр Дивеев.md
+++ b/3.3 Инициализация системы, Init, systemd - Александр Дивеев.md
@@ -58,7 +58,8 @@
 
 ### Задание 5.
 
-Можно ли с помощью systemd отмонтировать раздел/устройство?
+Можно ли с помощью systemd отмонтировать раздел/устройство? 
 
 *Приведите ответ в свободной форме.*
+#### Судя по всему можно. Только автоматически. Но команду не нашел. 
 
