Update 3.4 Управление пользователями - Степаненков Никита.md

--- a/3.4 Управление пользователями - Степаненков Никита.md
+++ b/3.4 Управление пользователями - Степаненков Никита.md
@@ -12,6 +12,7 @@
 
 *Приведите ответ в виде снимков экрана.*
 
+
 ------
 
 ### Задание 2.
@@ -19,6 +20,8 @@
 Создайте в общем каталоге (например, /tmp) директорию и назначьте для неё полный доступ со стороны группы `student2` и доступ на чтение всем остальным
 
 *Приведите ответ в виде снимков экрана.*
+
+<img width="568" alt="image" src="https://user-images.githubusercontent.com/107577468/197399659-6733c9a8-6f5f-4734-a221-6ab826c5963a.png">
 
 ------
 
