--- a/3.4 Управление пользователями - Степаненков Никита.md
+++ b/3.4 Управление пользователями - Степаненков Никита.md
@@ -22,6 +22,8 @@
 *Приведите ответ в виде снимков экрана.*
 
 <img width="568" alt="image" src="https://user-images.githubusercontent.com/107577468/197399659-6733c9a8-6f5f-4734-a221-6ab826c5963a.png">
+или <img width="364" alt="image" src="https://user-images.githubusercontent.com/107577468/197399763-f3785036-cfb9-40e0-be87-419019c8fe4c.png">
+
 
 ------
 
