Update 3.4 Управление пользователями - Степаненков Никита.md

--- a/3.4 Управление пользователями - Степаненков Никита.md
+++ b/3.4 Управление пользователями - Степаненков Никита.md
@@ -11,6 +11,8 @@
 Создайте пользователя `student2`, входящего в группу `student2`.
 
 *Приведите ответ в виде снимков экрана.*
+<img width="577" alt="image" src="https://user-images.githubusercontent.com/107577468/199112429-8db63bb4-2b6f-4b53-b431-742d3628157b.png">
+
 
 
 ------
