Update 3.4 Управление пользователями - Степаненков Никита.md

--- a/3.4 Управление пользователями - Степаненков Никита.md
+++ b/3.4 Управление пользователями - Степаненков Никита.md
@@ -23,8 +23,7 @@
 
 *Приведите ответ в виде снимков экрана.*
 
-<img width="568" alt="image" src="https://user-images.githubusercontent.com/107577468/197399659-6733c9a8-6f5f-4734-a221-6ab826c5963a.png">
-или <img width="364" alt="image" src="https://user-images.githubusercontent.com/107577468/197399763-f3785036-cfb9-40e0-be87-419019c8fe4c.png">
+<img width="730" alt="Снимок экрана 2022-11-04 в 15 11 31" src="https://user-images.githubusercontent.com/107577468/200029842-bf123fda-11bd-4511-a271-71a426d8b6e3.png">
 
 
 ------
@@ -37,6 +36,12 @@
 
 *Приведите ответ в свободной форме.*
 
+#### /etc/passwd - чтение для всех, а запись только пользователю root
+#### /etc/shadow - чтение только для пользователя root и группы shadow, запись только пользователю root  
+ 
+**** Основная цель - защитить хеши паролей пользователей. Файл /etc/passwd содержит различную информацию о пользователе, которая доступна для чтения всем. Файл /etc/shadow может быть прочитан только пользователем root . Данное разделение прав доступа не позволяет случайным пользователям видеть список хэшей паролей пользователей. 
+
+
 ------
 
 ### Задание 4.
@@ -44,6 +49,9 @@
 Удалите группу `student2`, а пользователя `student2` добавьте в группу `student1`.
 
 *Приведите ответ в виде снимков экрана.*
+
+<img width="727" alt="image" src="https://user-images.githubusercontent.com/107577468/200015098-118e1078-9a5c-4958-a037-4707867c40ab.png">
+
 
 ---
 
@@ -55,4 +63,7 @@
 Создайте в общем каталоге (например, /tmp) директорию и назначьте для неё полный доступ для всех, кроме группы `student1`.  Группа `student1` не должна иметь доступа к содержимому этого каталога.
 
 *Приведите ответ в виде снимков экрана.*
+
+<img width="733" alt="Снимок экрана 2022-11-04 в 17 42 52" src="https://user-images.githubusercontent.com/107577468/200029880-a83c6ae1-326f-4569-b5c5-71cfde4f8410.png">
+
 
