Update 3.4 Управление пользователями - Степаненков Никита.md

--- a/3.4 Управление пользователями - Степаненков Никита.md
+++ b/3.4 Управление пользователями - Степаненков Никита.md
@@ -25,6 +25,8 @@
 *Приведите ответ в виде снимков экрана.*
 
 <img width="730" alt="Снимок экрана 2022-11-04 в 15 11 31" src="https://user-images.githubusercontent.com/107577468/200029842-bf123fda-11bd-4511-a271-71a426d8b6e3.png">
+<img width="732" alt="image" src="https://user-images.githubusercontent.com/107577468/200032465-9b83b08b-3c79-494e-ac14-7b5f31e47094.png">
+
 
 
 ------
