--- a/3.5 Производительность системы - Степаненков Никита.md
+++ b/3.5 Производительность системы - Степаненков Никита.md
@@ -10,8 +10,14 @@
 **Выведите сортировку процессов по:**
 
 - памяти;
-- времени работы;
+<img width="878" alt="Снимок экрана 2022-11-05 в 15 13 05" src="https://user-images.githubusercontent.com/107577468/200337018-3ce0121c-5303-4a86-9e6e-38732aac4329.png">
+
+- времени работы;!
+[Uploading Снимок экрана 2022-11-05 в 15.18.32.png…]()
+
 - номеру;
+<img width="875" alt="Снимок экрана 2022-11-05 в 15 15 24" src="https://user-images.githubusercontent.com/107577468/200337206-ca67ec2b-2b11-46ab-a8ac-ab51b7b72240.png">
+
 - уровню потребления ресурсов.
 
 *Приведите ответ в виде снимков экрана.*
