Update 3.5 Производительность системы - Степаненков Никита.md

--- a/3.5 Производительность системы - Степаненков Никита.md
+++ b/3.5 Производительность системы - Степаненков Никита.md
@@ -13,8 +13,7 @@
 <img width="878" alt="Снимок экрана 2022-11-05 в 15 13 05" src="https://user-images.githubusercontent.com/107577468/200337018-3ce0121c-5303-4a86-9e6e-38732aac4329.png">
 
 - времени работы;!
-[Uploading Снимок экрана 2022-11-05 в 15.18.32.png…]()
-
+<img width="871" alt="Снимок экрана 2022-11-05 в 15 18 32" src="https://user-images.githubusercontent.com/107577468/200337744-f14a4d5e-b901-4ab7-bef6-227a4753ccef.png">
 - номеру;
 <img width="875" alt="Снимок экрана 2022-11-05 в 15 15 24" src="https://user-images.githubusercontent.com/107577468/200337206-ca67ec2b-2b11-46ab-a8ac-ab51b7b72240.png">
 
