--- a/3.5 Производительность системы - Степаненков Никита.md
+++ b/3.5 Производительность системы - Степаненков Никита.md
@@ -51,6 +51,10 @@
 - всем процессорам.
 
 *Приведите ответ в виде снимков экрана.*
+<img width="901" alt="Снимок экрана 2022-11-07 в 17 34 34" src="https://user-images.githubusercontent.com/107577468/200366051-8b1e1d58-2cb8-41fd-a89b-94bda68fb29e.png">
+
+<img width="901" alt="Снимок экрана 2022-11-07 в 17 36 13" src="https://user-images.githubusercontent.com/107577468/200366079-6cfa4c7c-4ae3-45e6-a4e5-a42dbdc96eee.png">
+
 
 ------
 
@@ -62,6 +66,10 @@
 2. Выведите полный путь процесса.
 
 *Приведите ответ в виде снимков экрана.*
+
+<img width="842" alt="Снимок экрана 2022-11-07 в 17 39 06" src="https://user-images.githubusercontent.com/107577468/200365952-98d74a13-c7aa-47db-a920-5326f6344984.png">
+
+<img width="1020" alt="Снимок экрана 2022-11-07 в 17 40 43" src="https://user-images.githubusercontent.com/107577468/200365992-5974ea42-95f1-453e-b663-5e5d6c5b548f.png">
 
 ---
 
