Update 3.4 Управление пользователями - Степаненков Никита.md

--- a/3.4 Управление пользователями - Степаненков Никита.md
+++ b/3.4 Управление пользователями - Степаненков Никита.md
@@ -11,8 +11,10 @@
 Создайте пользователя `student2`, входящего в группу `student2`.
 
 *Приведите ответ в виде снимков экрана.*
+Надеюсь указал правильные команды, не стал новую вирталку для задания делать. 
 
-<img width="577" alt="image" src="https://user-images.githubusercontent.com/107577468/199112429-8db63bb4-2b6f-4b53-b431-742d3628157b.png">
+<img width="1020" alt="image" src="https://user-images.githubusercontent.com/107577468/200654964-ed998609-4ef0-4780-80ec-9ded0187eabc.png">
+
 
 
 
@@ -51,8 +53,7 @@
 
 *Приведите ответ в виде снимков экрана.*
 
-<img width="727" alt="image" src="https://user-images.githubusercontent.com/107577468/200015098-118e1078-9a5c-4958-a037-4707867c40ab.png">
-<img width="732" alt="image" src="https://user-images.githubusercontent.com/107577468/200032465-9b83b08b-3c79-494e-ac14-7b5f31e47094.png">
+<img width="588" alt="image" src="https://user-images.githubusercontent.com/107577468/200656973-e837b2de-9eab-4c0a-95ec-afe918a54804.png">
 
 
 ---
