Update 3.5 Производительность системы - Степаненков Никита.md

--- a/3.5 Производительность системы - Степаненков Никита.md
+++ b/3.5 Производительность системы - Степаненков Никита.md
@@ -34,12 +34,23 @@
 **Выведите сортировку процессов по:**
 
 - общей нагрузке (минимум по трем параметрам);
+<img width="996" alt="Снимок экрана 2022-11-08 в 21 22 17" src="https://user-images.githubusercontent.com/107577468/200667527-011c3639-2d1d-4b87-a840-7016433cc229.png">
+<img width="984" alt="Снимок экрана 2022-11-08 в 21 21 56" src="https://user-images.githubusercontent.com/107577468/200667537-84391ad4-b93d-41f4-a182-75ae2f196f98.png">
+<img width="982" alt="Снимок экрана 2022-11-08 в 21 23 43" src="https://user-images.githubusercontent.com/107577468/200667738-98740085-42bd-4ac8-a5af-d66a7314749a.png">
+
 - загруженности HDD or SSD за указанный временной отрезок (10 минут);
+<img width="945" alt="Снимок экрана 2022-11-08 в 21 17 41" src="https://user-images.githubusercontent.com/107577468/200666746-529a592a-b5b9-4dbf-a22f-c1802176cc1f.png">
+
 - загруженности RAM за указанный временной отрезок (10 минут).
+<img width="914" alt="Снимок экрана 2022-11-08 в 21 18 06" src="https://user-images.githubusercontent.com/107577468/200666775-b9034933-2da0-4661-913b-f4661462ac51.png">
 
 **Сконфигурировать файл настроек atop - делать снимок памяти каждые пол часа**
 
+<img width="640" alt="image" src="https://user-images.githubusercontent.com/107577468/200661560-f902fc26-0485-4086-9787-93e0e31bc2ef.png">
+
+
 *Приведите ответ в виде снимков экрана.*
+
 
 ------
 
